[tool.poetry]
name = "phyto-voc"
version = "0.1.0"
description = "first python sample"
authors = ["Aidan Ashrafi"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.2"
requests = "^2.27.1"
xarray = "^2022.3.0"
hvplot = "^0.8.0"
netCDF4 = "^1.6.0"
datashader = "^0.14.1"
matlab = "^0.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.3"
jupyter-http-over-ws = "^0.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
